[gd_scene load_steps=17 format=2]

[ext_resource path="res://scripts/Main.gd" type="Script" id=1]
[ext_resource path="res://scripts/CameraControls.gd" type="Script" id=2]
[ext_resource path="res://resources/fonts/dynamicfont.tres" type="DynamicFont" id=3]
[ext_resource path="res://resources/menu_icon.png" type="Texture" id=4]
[ext_resource path="res://resources/close_menu_icon.png" type="Texture" id=5]

[sub_resource type="GDScript" id=51]
script/source = "extends Control


# Declare member variables here. Examples:
# var a = 2
# var b = \"text\"


# Called when the node enters the scene tree for the first time.
func _ready():
	pass # Replace with function body.


# Called every frame. 'delta' is the elapsed time since the previous frame.
#func _process(delta):
#	pass
"

[sub_resource type="DynamicFontData" id=1]
font_path = "res://resources/fonts/Ubuntu-Regular.ttf"

[sub_resource type="DynamicFont" id=52]
size = 78
font_data = SubResource( 1 )

[sub_resource type="StyleBoxFlat" id=45]
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
corner_detail = 6

[sub_resource type="StyleBoxFlat" id=47]
bg_color = Color( 0, 0, 0, 0.192157 )
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id=46]
bg_color = Color( 0.264, 0.264, 0.3, 1 )
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5
shadow_size = 2

[sub_resource type="StyleBoxTexture" id=54]
texture = ExtResource( 5 )
region_rect = Rect2( 0, 0, 256, 256 )

[sub_resource type="StyleBoxEmpty" id=53]

[sub_resource type="StyleBoxEmpty" id=55]

[sub_resource type="ProceduralSky" id=11]
sky_top_color = Color( 1, 1, 1, 1 )
sky_curve = 3.55923
ground_horizon_color = Color( 0.454902, 0.729412, 1, 1 )
ground_curve = 0.485029

[sub_resource type="Environment" id=10]
background_sky = SubResource( 11 )
ambient_light_color = Color( 1, 1, 1, 1 )
ambient_light_energy = 0.5
fog_depth_enabled = false

[node name="Root" type="Spatial"]
script = ExtResource( 1 )

[node name="CameraOrigin" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 0.937931, -0.346821, 0, 0.346821, 0.937931, 0, 0, 0 )
script = ExtResource( 2 )

[node name="Camera" type="Camera" parent="CameraOrigin"]
transform = Transform( -1, 0, -1.50996e-07, 0, 1, 0, 1.50996e-07, 0, -1, 0, 0, -28 )
fov = 50.0

[node name="UI" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 1
script = SubResource( 51 )

[node name="FloorSlider" type="Control" parent="UI"]
anchor_left = 0.786667
anchor_top = 0.284444
anchor_right = 1.0
anchor_bottom = 0.711111
margin_right = -6.10352e-05
__meta__ = {
"_edit_use_anchors_": true
}

[node name="CurrentFloor" type="Label" parent="UI/FloorSlider"]
anchor_top = 0.391
anchor_right = 0.937
anchor_bottom = 0.62
margin_left = -3.05176e-05
margin_top = -0.144104
margin_right = 0.0620193
margin_bottom = -0.0801544
custom_fonts/font = SubResource( 52 )
text = "1"
align = 1
valign = 1

[node name="FloorBelow" type="Label" parent="UI/FloorSlider/CurrentFloor"]
anchor_top = 1.62222
anchor_right = 1.0
anchor_bottom = 2.62222
custom_fonts/font = SubResource( 52 )
text = "0"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": true
}

[node name="FloorAbove" type="Label" parent="UI/FloorSlider/CurrentFloor"]
anchor_top = -1.66667
anchor_right = 1.0
anchor_bottom = -0.666667
custom_fonts/font = SubResource( 52 )
text = "2"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Center" type="Control" parent="UI/FloorSlider"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -20.0
margin_top = -20.0
margin_right = 20.0
margin_bottom = 20.0
mouse_filter = 2

[node name="SearchBar" type="Control" parent="UI"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Panel" type="Panel" parent="UI/SearchBar"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Slider" type="Control" parent="UI/SearchBar/Panel"]
anchor_right = 1.0
anchor_bottom = 0.0355556
__meta__ = {
"_edit_use_anchors_": true
}

[node name="SliderButton" type="Panel" parent="UI/SearchBar/Panel/Slider"]
anchor_left = 0.333
anchor_top = 0.437
anchor_right = 0.667
anchor_bottom = 0.562
margin_left = 0.199997
margin_top = 0.0159817
margin_right = -0.200043
margin_bottom = 0.015976
custom_styles/panel = SubResource( 45 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="PREVIEW" type="Label" parent="UI/SearchBar/Panel"]
anchor_left = 0.0266667
anchor_top = 0.488889
anchor_right = 0.98
anchor_bottom = 0.517778
mouse_filter = 0
size_flags_horizontal = 3
size_flags_vertical = 6
text = "НЕ МОГУ НАЙТИ НОМЕР КАБИНЕТА("
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": true
}

[node name="ScrollContainer" type="ScrollContainer" parent="UI/SearchBar/Panel"]
anchor_left = 0.0266667
anchor_top = 0.231111
anchor_right = 0.98
anchor_bottom = 0.853333
custom_styles/bg = SubResource( 47 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="VBoxContainer" type="VBoxContainer" parent="UI/SearchBar/Panel/ScrollContainer"]
margin_right = 572.0
margin_bottom = 560.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="From" type="LineEdit" parent="UI/SearchBar/Panel"]
anchor_left = 0.0266667
anchor_top = 0.0888889
anchor_right = 0.98
anchor_bottom = 0.118889
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_styles/read_only = SubResource( 46 )
custom_styles/focus = SubResource( 46 )
custom_styles/normal = SubResource( 46 )
align = 1
__meta__ = {
"_edit_use_anchors_": true
}

[node name="To" type="LineEdit" parent="UI/SearchBar/Panel"]
anchor_left = 0.0266667
anchor_top = 0.16
anchor_right = 0.98
anchor_bottom = 0.19
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_styles/read_only = SubResource( 46 )
custom_styles/focus = SubResource( 46 )
custom_styles/normal = SubResource( 46 )
align = 1
__meta__ = {
"_edit_use_anchors_": true
}

[node name="FromLabel" type="Label" parent="UI/SearchBar/Panel"]
anchor_left = 0.04
anchor_top = 0.0533333
anchor_right = 0.96
anchor_bottom = 0.0822222
custom_fonts/font = ExtResource( 3 )
text = "Откуда"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": true
}

[node name="ToLabel" type="Label" parent="UI/SearchBar/Panel"]
anchor_left = 0.04
anchor_top = 0.124444
anchor_right = 0.96
anchor_bottom = 0.153333
custom_fonts/font = ExtResource( 3 )
text = "Куда"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": true
}

[node name="List" type="Label" parent="UI/SearchBar/Panel"]
anchor_left = 0.04
anchor_top = 0.195556
anchor_right = 0.96
anchor_bottom = 0.224444
custom_fonts/font = ExtResource( 3 )
text = "Список"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Path" type="Button" parent="UI/SearchBar/Panel"]
anchor_left = 0.04
anchor_top = 0.871111
anchor_right = 0.973333
anchor_bottom = 0.968889
text = "ПОСТРОИТЬ МАРШРУТ!"
__meta__ = {
"_edit_use_anchors_": true
}

[node name="SettingsButton" type="Button" parent="UI"]
visible = false
anchor_right = 0.107
anchor_bottom = 0.071
margin_right = -0.200005
margin_bottom = 0.0999985
custom_styles/pressed = SubResource( 54 )
custom_styles/focus = SubResource( 53 )
icon = ExtResource( 4 )
flat = true
icon_align = 1
expand_icon = true

[node name="Settings" type="Control" parent="UI"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Panel" type="Panel" parent="UI/Settings"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="CloseSettingsButton" type="Button" parent="UI/Settings"]
anchor_right = 0.107
anchor_bottom = 0.071
margin_right = -0.200005
margin_bottom = 0.0999985
custom_styles/pressed = SubResource( 54 )
custom_styles/focus = SubResource( 53 )
icon = ExtResource( 5 )
flat = true
icon_align = 1
expand_icon = true

[node name="Label" type="Label" parent="UI/Settings"]
anchor_left = 0.0533333
anchor_top = 0.228889
anchor_right = 0.565
anchor_bottom = 0.262222
text = "Полупрозрачная модель"
__meta__ = {
"_edit_use_anchors_": true
}

[node name="CheckButton2" type="CheckButton" parent="UI/Settings"]
anchor_left = 0.84
anchor_top = 0.222222
anchor_right = 0.966667
anchor_bottom = 0.266667
margin_left = 3.05176e-05
margin_bottom = -1.52588e-05
custom_styles/focus = SubResource( 55 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Label2" type="Label" parent="UI/Settings"]
anchor_left = 0.0533333
anchor_top = 0.302222
anchor_right = 0.666667
anchor_bottom = 0.335556
margin_right = -3.05176e-05
text = "Выделять пол другим цветом"
__meta__ = {
"_edit_use_anchors_": true
}

[node name="CheckButton" type="CheckButton" parent="UI/Settings"]
anchor_left = 0.84
anchor_top = 0.293333
anchor_right = 0.966667
anchor_bottom = 0.337778
margin_left = 3.05176e-05
custom_styles/focus = SubResource( 55 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource( 10 )

[node name="DirectionalLight" type="DirectionalLight" parent="."]
transform = Transform( -0.905754, -0.3005, 0.298847, 0, 0.705154, 0.709054, -0.423804, 0.642228, -0.638696, 0, 3, 0 )
light_color = Color( 0.254902, 0.254902, 0.254902, 1 )

[node name="Model" type="Spatial" parent="."]

[node name="Paths" type="Spatial" parent="."]

[connection signal="mouse_entered" from="UI" to="CameraOrigin" method="_on_UI_mouse_entered"]
[connection signal="mouse_exited" from="UI" to="CameraOrigin" method="_on_UI_mouse_exited"]
[connection signal="gui_input" from="UI/FloorSlider" to="." method="_on_FloorSlider_gui_input"]
[connection signal="gui_input" from="UI/SearchBar" to="." method="_on_SearchBar_gui_input"]
[connection signal="gui_input" from="UI/SearchBar/Panel" to="." method="_on_SearchBar_gui_input"]
[connection signal="gui_input" from="UI/SearchBar/Panel/Slider" to="." method="_on_SearchBar_gui_input"]
[connection signal="gui_input" from="UI/SearchBar/Panel/Slider/SliderButton" to="." method="_on_SearchBar_gui_input"]
[connection signal="text_changed" from="UI/SearchBar/Panel/From" to="." method="_on_From_text_changed"]
[connection signal="text_entered" from="UI/SearchBar/Panel/From" to="." method="_on_From_text_entered"]
[connection signal="text_changed" from="UI/SearchBar/Panel/To" to="." method="_on_To_text_changed"]
[connection signal="text_entered" from="UI/SearchBar/Panel/To" to="." method="_on_To_text_entered"]
[connection signal="pressed" from="UI/SearchBar/Panel/Path" to="." method="_on_Path_pressed"]
